--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio" />
 	<meta name="keywords" content="portfolio resume" />
-	<meta name="author" content="Sedky A" />
+	<meta name="author" content="Krupen Talati" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
