--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 											<div class="slider-text-inner js-fullheight">
 												<div class="desc">
 													<h1>Hi! <br>I'm Krupen.</h1>
-													<h2>I am a <b>Working on it my nigga</b></h2>
+													<h2>I am a <b>Working on it.....</b></h2>
 
 												</div>
 											</div>
@@ -132,12 +132,7 @@
 											<span class="heading-meta">About</span>
 											<h2 class="colorlib-heading">Who Am I?</h2>
 											<p><strong>Hi I'm Krupen,</strong>
-												a technical enthusiast, and solutions architect at <a href="https://tyk.io">Tyk</a>, the best APIM platform in the world!
-												<br><br>
-												- I love to <a href="https://www.youtube.com/channel/UCXR-k7wwwhdovpXXkRitJ_g">learn and teach,</a> especially when it comes to my passion, software.
-												<br><br>
-												- I love to talk about infrastructure, containerization, programming, and everything Serverless / Cloud.
-												<br><br>
+												a technical enthusiast
 												- I love to build things.  For <a href="https://github.com/sedkis">myself and the community.</a> 
 											</p>
 										</div>
