--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<ul>
 						<li><a href="https://www.linkedin.com/in/sedky" target="_blank" title="LinkedIn"><i
 									class="icon-social-linkedin"></i></a></li>
-						<li><a href="https://github.com/sedkis" target="_blank" title="GitHub"><i
+						<li><a href="https://github.com/Krupent" target="_blank" title="GitHub"><i
 									class="icon-social-github"></i></a>
 						</li>
 						<li><a href="mailto:sedky.ab@gmail.com" title="Email"><i class="icon-mail"></i></a>
