--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 				<!-- Navbar Footer -->
 				<div class="colorlib-footer">
 					<ul>
-						<li><a href="https://www.linkedin.com/in/sedky" target="_blank" title="LinkedIn"><i
+						<li><a href="https://www.linkedin.com/in/krupen-t-61a97b1b5?trk=people-guest_people_search-card" target="_blank" title="LinkedIn"><i
 									class="icon-social-linkedin"></i></a></li>
 						<li><a href="https://github.com/Krupent" target="_blank" title="GitHub"><i
 									class="icon-social-github"></i></a>
 						</li>
-						<li><a href="mailto:sedky.ab@gmail.com" title="Email"><i class="icon-mail"></i></a>
+						<li><a href="krupnetalati@gmail.com" title="Email"><i class="icon-mail"></i></a>
 						</li>
 						<li><a href="https://www.youtube.com/channel/UCXR-k7wwwhdovpXXkRitJ_g" title="youtube"><i class="icon-youtube"></i></a>
 						</li>
