--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 											<h2 class="colorlib-heading">Who Am I?</h2>
 											<p><strong>Hi I'm Krupen,</strong>
 												a technical enthusiast
-												- I love to build things.  For <a href="https://github.com/sedkis">myself and the community.</a> 
+												- I love to build things.  For <a href="https://github.com/krupent">myself and the community.</a> 
 											</p>
 										</div>
 									</div>
@@ -164,7 +164,7 @@
 											<h2>Interested in what I am currently working on? Feel free to visit my
 												GitHub!
 											</h2>
-											<a href="https://github.com/sedkis" target="_blank" class="btn-hire">View <i
+											<a href="https://github.com/krupnet" target="_blank" class="btn-hire">View <i
 													class="icon-github"></i></a>
 										</div>
 									</div>
