--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 											<div class="slider-text-inner js-fullheight">
 												<div class="desc">
 													<h1>Hi! <br>I'm Krupen.</h1>
-													<h2>I am a <b>Working on it.....</b></h2>
+													<h2>I am a <b>Work under process.....</b></h2>
 
 												</div>
 											</div>
@@ -487,7 +487,7 @@
 												<h4 class="panel-title">
 													<a data-toggle="collapse" data-parent="#accordion"
 														href="#collapseOne" aria-expanded="true"
-														aria-controls="collapseOne">Bachelor of Computer Science (BsCs)
+														aria-controls="collapseOne">Bachelor of Science in CyberSecurity
 													</a>
 												</h4>
 											</div>
@@ -498,16 +498,16 @@
 														<div class="colorlib-feature edu-feature colorlib-feature-sm">
 															<div class="colorlib-icon">
 																<img src="images/western_1.gif" class="img-responsive"
-																	alt="Western University">
+																	alt="Kennesaw State University">
 															</div>
 															<div class="colorlib-text edu-feature__desc">
-																<a href="https://www.uwo.ca/" target="_blank"><b>Western
+																<a href="https://www.uwo.ca/" target="_blank"><b>Kennesaw state
 																		University</b></a>
-																<span class="heading-meta">09/2011 - 06/2015</span>
-																<b>Bachelor of Computer Science (BsCs)</b>
+																<span class="heading-meta">08/2019 - 05/2023</span>
+																<b>Bachelor of Science in CyberSecurity </b>
 																<ul>
 																	<li>
-																		Major in Computer Science
+																		Major in Cyber Security
 																	</li>
 																</ul>
 															</div>
