--- a/index.html
+++ b/index.html
@@ -497,11 +497,11 @@
 													<div class="row">
 														<div class="colorlib-feature edu-feature colorlib-feature-sm">
 															<div class="colorlib-icon">
-																<img src="images/western_1.gif" class="img-responsive"
+																<img src="images/western_1.png" class="img-responsive"
 																	alt="Kennesaw State University">
 															</div>
 															<div class="colorlib-text edu-feature__desc">
-																<a href="https://www.uwo.ca/" target="_blank"><b>Kennesaw state
+																<a href="https://www.uwo.ca/" target="_blank"><b>Kennesaw State
 																		University</b></a>
 																<span class="heading-meta">08/2019 - 05/2023</span>
 																<b>Bachelor of Science in CyberSecurity </b>
