--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 											<div class="slider-text-inner js-fullheight">
 												<div class="desc">
 													<h1>Hi! <br>I'm Krupen.</h1>
-													<h2>I am a <b>Work under process.....</b></h2>
+													<h2> <b> Under construction going to take a while.....</b></h2>
 
 												</div>
 											</div>
