--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 							<div class="col-md-5" style="display: flex;">
 								<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<a href="mailto:sedky.ab@gmail.com" target="blank"><i class="icon-mail"></i></a>
+										<a href="mailto:krupentalati@gmail.com" target="blank"><i class="icon-mail"></i></a>
 									</div>
 									<div class="colorlib-text">
 										<p></p>
@@ -734,7 +734,7 @@
 
 								<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<a href="https://github.com/sedkis" target="blank"><i class="icon-github"></i></a>
+										<a href="https://github.com/krupent" target="blank"><i class="icon-github"></i></a>
 									</div>
 									<div class="colorlib-text">
 										<p> </p>
