--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 													<div class="row">
 														<div class="colorlib-feature edu-feature colorlib-feature-sm">
 															<div class="colorlib-icon">
-																<img src="images/Unknown-2.png" class="img-responsive"
+																<img src="images:western_1.png" class="img-responsive"
 																	alt="Kennesaw State University">
 															</div>
 															<div class="colorlib-text edu-feature__desc">
