--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 
 								<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
 									<div class="colorlib-icon">
-										<a href="https://www.linkedin.com/in/sedky/" target="blank"><i class="icon-linkedin2"></i></a>
+										<a href="https://www.linkedin.com/in/krupent/" target="blank"><i class="icon-linkedin2"></i></a>
 									</div>
 								</div>
 								<br>
