--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<ul>
 							<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 							<li><a href="#" data-nav-section="about">About</a></li>
-							<li><a href="#" data-nav-section="work">Work</a></li>
+							<li><a href="#" data-nav-section="resume">Rxfesume</a></li>
 							<li><a href="#" data-nav-section="services">What Do I Do</a></li>
 							<!-- <li><a href="#" data-nav-section="skills">Skills</a></li> -->
 							<li><a href="#" data-nav-section="education">Education</a></li>
@@ -91,8 +91,7 @@
 						</li>
 						<li><a href="krupnetalati@gmail.com" title="Email"><i class="icon-mail"></i></a>
 						</li>
-						<li><a href="https://www.youtube.com/channel/UCXR-k7wwwhdovpXXkRitJ_g" title="youtube"><i class="icon-youtube"></i></a>
-						</li>
+						
 					</ul>
 				</div>
 			</aside>
